--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = \"\""
+   ]
   },
   {
    "cell_type": "code",
