Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,12 +71,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ART VANDELAY'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = \"art vandelay\"\n",
+    "name.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name = \"art vandelay\"\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
