--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\" # 'Art Vandelay'\n"
    ]
   },
   {
