Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
    },
    "outputs": [],
    "source": [
-    "name = \"art vandelay\" # 'Art Vandelay'\n"
+    "name = \"art vandelay\" # 'Art Vandelay'\n",
+    "name.title()"
    ]
   },
   {
