--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n"
+    "\"art.vandelay@vandelay.co\" # False\n",
+    "email = \"art.vandelay@vandelay.co\"\n"
    ]
   },
   {
