--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    "outputs": [],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "email = \"art.vandelay@vandelay.co\"\n"
+    "email = \"art.vandelay@vandelay.co\"\n",
+    "email.endswith()"
    ]
   },
   {
