--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,7 @@
     }
    ],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n",
+    "site = 'vandelay.com' # 'www.vandelay.com'\n",
     "'www.'+'vandelay.com'"
    ]
   },
