Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    ],
    "source": [
     "site = 'vandelay.com' # 'www.vandelay.com'\n",
-    "site.conca"
+    "site.concate('.ww')"
    ]
   },
   {
