--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
    ],
    "source": [
     "site = 'vandelay.com' # 'www.vandelay.com'\n",
-    "site.concate('www.')"
+    "'www.'+'vandelay.com'"
    ]
   },
   {
